--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -7,7 +7,10 @@
   <div>
       <div th:replace="common/header"></div>
 
+      <div th:replace="common/menu"></div>
+      
       <div class="block1"></div>
+      <div th:replace="common/slide"></div>
 
       <div class="gameboy-container">
         <div th:replace="common/gameboy"></div>
