--- a/src/main/resources/static/css/gameboy.css
+++ b/src/main/resources/static/css/gameboy.css
@@ -2,7 +2,7 @@ a{
   text-decoration: none;
 }
 .gameboy-container {
-  
+  margin-top: 5%;
   display: flex;
   /* Flexbox 설정 */
   justify-content: space-around;
@@ -11,17 +11,12 @@ a{
 
 .block1 {
   width: 100%;
-  height: 200px;
+  
 }
-
-.gameboy {
-  text-align: center;
-}
-
-
 
 .gameboy {
   
+  text-align: center;
   position: relative;
   width: 350px;
   height: 570px;
