--- a/src/main/resources/static/css/slide.css
+++ b/src/main/resources/static/css/slide.css
@@ -5,7 +5,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  
+  bottom: 94px;
   max-width: 1000px;
   position: relative;
   margin: auto;
@@ -43,9 +43,7 @@ img {vertical-align: middle;}
 }
 
 
-.active {
-  background-color: #717171;
-}
+
 
 /* Fading animation */
 .fade {
