--- a/src/main/resources/templates/common/gameboy5.html
+++ b/src/main/resources/templates/common/gameboy5.html
@@ -20,11 +20,11 @@
       <div class="label">
         <div class="title">GAME</div>
         <div class="subtitle">
-          <span class="c">테</span><!--
-       --><span class="o1">트</span><!--
-       --><span class="l">리</span><!--
-       --><span class="o2">스</span><!--
-       --><span class="r">?</span>
+          <span class="c">Co</span><!--
+       --><span class="o1">Lo</span><!--
+       --><span class="l">R</span><!--
+       --><span class="o2">O</span><!--
+       --><span class="r">N</span>
         </div>
       </div>
       
