--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -61,7 +61,7 @@
             <a th:href="@{/roulette}" class="gameboy4_link">
               <div th:replace="common/gameboy4"></div>
             </a>
-            <a th:href="@{/roulette}" class="gameboy5_link">
+            <a th:href="@{/cll}" class="gameboy5_link">
               <div th:replace="common/gameboy5">
               </div>
             </a>
