--- a/src/main/resources/templates/common/gameboy4.html
+++ b/src/main/resources/templates/common/gameboy4.html
@@ -15,7 +15,7 @@
         POWER
       </div>
       
-      <canvas class="display" id="mainCanvas"></canvas>
+      <canvas class="display4" id="mainCanvas"></canvas>
       
       <div class="label">
         <div class="title">GAME</div>
