--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -110,7 +110,7 @@
             })
                 .then(response => response.text())
                 .then(() => {
-                    window.location.href = '/index';
+                    window.location.href = '/';
                 });
         }
 
