--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -66,7 +66,7 @@
               </div>
             </a>
 
-            <a th:href="@{/tetris}" class="gameboy6_link">
+            <a href="https://pokerogue.net/" class="gameboy6_link">
               <div th:replace="common/gameboy6"></div>
             </a>
 
