--- a/src/main/resources/static/css/gameboy.css
+++ b/src/main/resources/static/css/gameboy.css
@@ -139,7 +139,7 @@ a {
     }
 
     .display6 {
-      background-image: url("/img/3.jpg");
+      background-image: url("/img/6.gif");
       background-repeat: no-repeat; 
       background-position: center; 
       height: 190px;
