--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -108,7 +108,7 @@
     </form>
     <button class="btn btn-danger" onclick="location.href='/users/signup'">Sign Up</button>
     <!-- Home 버튼 추가 -->
-    <button class="btn" onclick="location.href='/index'">Home</button>
+    <button class="btn" onclick="location.href='/'">Home</button>
     <p th:if="${errorMessage}" th:text="${errorMessage}"></p>
 </div>
 
