--- a/src/main/resources/templates/common/gameboy6.html
+++ b/src/main/resources/templates/common/gameboy6.html
@@ -20,11 +20,11 @@
       <div class="label">
         <div class="title">GAME</div>
         <div class="subtitle">
-          <span class="c">포</span><!--
-       --><span class="o1">켓</span><!--
-       --><span class="l">로</span><!--
-       --><span class="o2">그</span><!--
-       --><span class="r"></span>
+          <span class="c">Po</span><!--
+       --><span class="o1">Ke</span><!--
+       --><span class="l">M</span><!--
+       --><span class="o2">o</span><!--
+       --><span class="r">n</span>
         </div>
       </div>
       
