로그인 변경함 나머지는 라이어는 고치다 만거

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -136,7 +136,7 @@
                 form.submit();
             });
 
-            // WebSocket 연결 설정
+            // WebSocket 연결 설정  // 서버 킬때마다 바꿀것
             var socket = new WebSocket("ws://localhost:8080/list");
 
             socket.onmessage = function (event) {
