--- a/src/main/resources/templates/lobby.html
+++ b/src/main/resources/templates/lobby.html
@@ -78,7 +78,7 @@
         // playerName을 JavaScript 변수로 설정
         var playerName = /*[[${playerName}]]*/ '[[${playerName}]]';
 
-        // WebSocket 연결 설정
+        // WebSocket 연결 설정  // 서버 킬때마다 바꿀것
         var socket = new WebSocket("ws://localhost:8080/list");
 
         // WebSocket이 열렸을 때 실행되는 함수
