seo1_마이페이지 구현

--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -125,7 +125,7 @@
     <div class="topnav">
       <table>
         <a class="active" th:href="@{/index}">Home</a>
-        <a href="#news">Mypage</a>
+        <a th:href="@{/users/mypage}">Mypage</a>
         <a href="#contact">Contact</a>
 
         <div class="topnav-right">
