--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -56,8 +56,7 @@
               <div th:replace="common/gameboy"></div>
             </a>
             <a th:href="@{/game}" class="gameboy2_link">
-              <div th:replace="common/gameboy2">
-              </div>
+              <div th:replace="common/gameboy2"></div>
             </a>
             <a th:href="@{/tetris}" class="gameboy3_link">
               <div th:replace="common/gameboy3"></div>
@@ -70,8 +69,7 @@
               <div th:replace="common/gameboy4"></div>
             </a>
             <a th:href="@{/cll}" class="gameboy5_link">
-              <div th:replace="common/gameboy5">
-              </div>
+              <div th:replace="common/gameboy5"></div>
             </a>
             <a href="https://pokerogue.net/" class="gameboy6_link">
               <div th:replace="common/gameboy6"></div>
@@ -90,61 +88,8 @@
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.gameboy6_link').click(function (event) {
-        // AJAX 요청을 통해 로그인 상태 확인
-        $.ajax({
-          type: 'GET',
-          url: '/users/checkLoginStatus', // 사용자 로그인 상태 확인 컨트롤러 경로
-          success: function (response) {
-            if (response.loggedIn) {
-              // 로그인 상태인 경우, 외부 링크로 이동
-              window.location.href = 'https://pokerogue.net/';
-            } else {
-              // 로그인되어 있지 않은 경우, 로그인 페이지로 이동
-              window.location.href = '/users/login';
-            }
-          },
-          error: function (xhr, status, error) {
-            console.error('Error checking login status:', error);
-          }
-        });
-
-        // 기본 클릭 동작을 막습니다.
-        event.preventDefault();
-      });
-    });
-    document.addEventListener("DOMContentLoaded", function () {
-      const progressBar = document.querySelector('.progress-bar');
-      const loadingScreen = document.querySelector('#loading-screen');
-      const delay = () => {
-        return new Promise(resolve => setTimeout(resolve, 600));
-      }
-
-      const hideProgressBar = async () => {
-        await delay();
-        progressBar.style.display = 'none';
-      }
-
-      const init = async () => {
-        await delay();
-        await hideProgressBar();
-        const curtainLeft = document.querySelector('.curtain-left');
-        const curtainRight = document.querySelector('.curtain-right');
-        const content = document.getElementById('content');
-
-        curtainLeft.style.transform = 'translateX(-100%)';
-        curtainRight.style.transform = 'translateX(100%)';
-
-        content.classList.add('show');
-
-        setTimeout(() => {
-          loadingScreen.style.display = 'none';
-        }, 600);
-      };
-      init();
-    });
-  </script>
+  <script src="/js/relogin.js"></script>
+  <script src="/js/index.js"></script>
+</body>
 
 </html>
