--- a/src/main/resources/templates/lobby.html
+++ b/src/main/resources/templates/lobby.html
@@ -79,7 +79,7 @@
         var playerName = /*[[${playerName}]]*/ '[[${playerName}]]';
 
         // WebSocket 연결 설정  // 서버 킬때마다 바꿀것
-        var socket = new WebSocket("ws://localhost:8080/list");
+        var socket = new WebSocket("wss://" + window.location.host + "/list");
 
         // WebSocket이 열렸을 때 실행되는 함수
         socket.onopen = () => {
