--- a/src/main/resources/static/css/gameboy.css
+++ b/src/main/resources/static/css/gameboy.css
@@ -142,6 +142,7 @@ a {
       background-image: url("/img/6.gif");
       background-repeat: no-repeat; 
       background-position: center; 
+      background-size: cover;
       height: 190px;
       width: 210px;
       border-radius: 3px;
@@ -151,6 +152,7 @@ a {
       background-image: url("/img/5.gif");
       background-repeat: no-repeat; 
       background-position: center; 
+      background-size: contain;
       height: 190px;
       width: 210px;
       border-radius: 3px;
@@ -170,6 +172,7 @@ a {
       background-image: url("/img/2.gif");
       background-repeat: no-repeat;
       background-position: center; 
+      background-size: contain;
       height: 190px;
       width: 210px;
       border-radius: 3px;
