영어에서 한글로 변경

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -199,7 +199,7 @@
             <span class="close">&times;</span>
             <form id="joinForm">
                 <input type="hidden" id="modalRoomId" name="roomId" />
-                <label for="modalPlayerName">닉네임을 적으세요:</label>
+                <label for="modalPlayerName">닉네임을 영어로 적으세요:</label>
                 <input type="text" id="modalPlayerName" name="playerName" required />
                 <button type="submit">Join Room</button>
             </form>
