--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Vote for the Liar</h1>
+        <h1>결과창</h1>
         <div class="players">
             <h3>플레이어 목록</h3>
             <ul>
